update select of modal

--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -16,7 +16,7 @@
         id="select-cast"
         class="modal-price__input modal-price__custom-select"
       >
-        <option value="1500">ДВОМІСНИЙ ЛЮКС</option>
+        <option value="1500" selected>ДВОМІСНИЙ ЛЮКС</option>
         <option value="1300">ТРЬОХМІСНИЙ НОМЕР</option>
         <option value="1000">ДВОМІСНИЙ НОМЕР</option>
       </select>
