--- a/src/partials/modal-price2r.html
+++ b/src/partials/modal-price2r.html
@@ -18,9 +18,9 @@
       >
         <option value="1500">ДВОМІСНИЙ ЛЮКС</option>
         <option value="1300">ТРЬОХМІСНИЙ НОМЕР</option>
-        <option value="1000">ДВОМІСНИЙ НОМЕР</option>
+        <option value="1000" selected>ДВОМІСНИЙ НОМЕР</option>
       </select>
-      
+
       <p class="modal-price__text">Категорія номеру</p>
       <div class="container__form-price">
         <div class="wrapper-input">
