--- a/src/partials/modal-price2r.html
+++ b/src/partials/modal-price2r.html
@@ -57,6 +57,7 @@
               placeholder="1000"
               min="100"
               value="2000"
+              disabled
               required
             />
           </div>
