--- a/src/sass/layout/_about-restaurant.scss
+++ b/src/sass/layout/_about-restaurant.scss
@@ -1,11 +1,14 @@
 .about-our-rest {
   background-color: $colorBgLemon;
   padding-top: 16px;
-  padding-bottom: 16px;
+  padding-bottom: 20px;
 
   @include tablet {
     padding-top: 120px;
     padding-bottom: 32px;
+  }
+  @include desktop {
+    padding-bottom: 50px;
   }
 }
 
