add button prices

--- a/src/partials/pages/hotel/hero.html
+++ b/src/partials/pages/hotel/hero.html
@@ -18,10 +18,19 @@
           ></a
         >
       </div>
-
+      
+      <ul class="hero__bloc-btn">
+        <li class="hero__btn item">
           <button type="button" class="btn" data-modRoom-open>
             Забронювати номер
           </button>
+        </li>
+        <li class="hero__btn item">
+          <button type="button" class="btn" data-modPrice-open>
+            Переглянути ціни
+          </button>
+        </li>
+      </ul>
       </div>
 
     <ul class="hero__social">
