fix text-transform: initial;

--- a/src/sass/pages/room-for-2/_hero.scss
+++ b/src/sass/pages/room-for-2/_hero.scss
@@ -186,6 +186,7 @@
   width: 232px;
   height: 48px;
   margin-left: 50px;
+  text-transform: initial;
   @include mobile {
     margin-left: 94px;
   }
