--- a/src/partials/pages/hotel/room-luxe.html
+++ b/src/partials/pages/hotel/room-luxe.html
@@ -243,7 +243,7 @@
       <button
         type="button"
         class="room-luxe__button btn btn--hotel-and-rest"
-        data-modPrice-open
+        data-modPriceLuxe-open
       >
         Переглянути ціни
       </button>
