fix validator errors

--- a/src/partials/modal-room.html
+++ b/src/partials/modal-room.html
@@ -6,7 +6,7 @@
       </svg>
     </button>
     <p class="modal-room__title">Забронювати номер</p>
-    <form class="modal-room__form" action="">
+    <form class="modal-room__form">
       <div class="modal-room__wrapper">
         <div class="modal-room__input-wrap">
           <div class="modal-room__input-field">
