--- a/src/partials/modal-detalis-room.html
+++ b/src/partials/modal-detalis-room.html
@@ -6,44 +6,96 @@
       </svg>
     </button>
     <p class="modal-room__title">Забронювати номер</p>
-    <form class="modal-room__form" action="">
+    <form class="modal-room__form">
       <div class="modal-room__wrapper">
         <div class="modal-room__input-wrap">
           <div class="modal-room__input-field">
-            <input type="text" id="client-name1" name="user-name" placeholder="Ваше ім’я" required
-              pattern="[A-Za-zА-Яа-яґҐЁёІіЇїЄє'’ʼ\s-]{2,20}{2,50}" class="modal-room__modal-input" />
-            <label for="client-name1" class="modal-room__modal-label">На кого забронювати номер?</label>
+            <input
+              type="text"
+              id="client-name1"
+              name="user-name"
+              placeholder="Ваше ім’я"
+              required
+              pattern="[A-Za-zА-Яа-яґҐЁёІіЇїЄє'’ʼ\s-]{2,20}{2,50}"
+              class="modal-room__modal-input"
+            />
+            <label for="client-name1" class="modal-room__modal-label"
+              >На кого забронювати номер?</label
+            >
           </div>
           <div class="modal-room__input-field">
-            <input class="modal-room__modal-input" type="tel" id="phone1" name="phone" placeholder="+38 (___) ___-__-__"
-              pattern="+[0-9]" required />
-            <label for="phone1" class="modal-room__modal-label">Номер телефону</label>
+            <input
+              class="modal-room__modal-input"
+              type="tel"
+              id="phone1"
+              name="phone"
+              placeholder="+38 (___) ___-__-__"
+              pattern="+[0-9]"
+              required
+            />
+            <label for="phone1" class="modal-room__modal-label"
+              >Номер телефону</label
+            >
           </div>
         </div>
         <div class="modal-room__input-wrap--category">
           <div class="modal-room__input-field">
-            <select name="room-types" id="room-types1" class="modal-room__modal-input modal-room__custom-select">
-              <option value="lux" selected class="modal-room__modal-option">Двомісний люкс</option>
-              <option value="two" class="modal-room__modal-option">Двомісний номер</option>
-              <option value="three" class="modal-room__modal-option">Трьохмісний номер</option>
+            <select
+              name="room-types"
+              id="room-types1"
+              class="modal-room__modal-input modal-room__custom-select"
+            >
+              <option value="lux" selected class="modal-room__modal-option">
+                Двомісний люкс
+              </option>
+              <option value="two" class="modal-room__modal-option">
+                Двомісний номер
+              </option>
+              <option value="three" class="modal-room__modal-option">
+                Трьохмісний номер
+              </option>
             </select>
-            <label class="modal-room__modal-label" for="room-types1">Категорія номеру</label>
+            <label class="modal-room__modal-label" for="room-types1"
+              >Категорія номеру</label
+            >
           </div>
         </div>
         <div class="modal-room__input-box">
           <div class="modal-room__input-field arrival-date">
-            <input class="modal-room__modal-input  modal-room__custom-select" type="text" name="arrival-date"
-              id="arrival-date1" placeholder="Сьогодні" onfocus="(this.type='date')" />
-            <label class="modal-room__modal-label" for="arrival-date1">Дата заїзду</label>
+            <input
+              class="modal-room__modal-input modal-room__custom-select"
+              type="text"
+              name="arrival-date"
+              id="arrival-date1"
+              placeholder="Сьогодні"
+              onfocus="(this.type='date')"
+            />
+            <label class="modal-room__modal-label" for="arrival-date1"
+              >Дата заїзду</label
+            >
           </div>
           <div class="modal-room__input-field">
-            <input class="modal-room__modal-input  modal-room__custom-select" type="text" name="departure-date"
-              id="departure-date1" placeholder="Сьогодні" onfocus="(this.type='date')" />
-            <label class="modal-room__modal-label" for="arrival-date1">Дата виїзду</label>
+            <input
+              class="modal-room__modal-input modal-room__custom-select"
+              type="text"
+              name="departure-date"
+              id="departure-date1"
+              placeholder="Сьогодні"
+              onfocus="(this.type='date')"
+            />
+            <label class="modal-room__modal-label" for="arrival-date1"
+              >Дата виїзду</label
+            >
           </div>
         </div>
       </div>
-      <button type="submit" class="modal-room__button modal__btn" data-modal-close>Оформити бронювання</button>
+      <button
+        type="submit"
+        class="modal-room__button modal__btn"
+        data-modal-close
+      >
+        Оформити бронювання
+      </button>
     </form>
   </div>
 </div>
