fix modal-calc restored after oldfix

--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -12,7 +12,7 @@
 
     <form class="form form__modal-price">
       <select
-        name="number-cast"
+        name="numberCost"
         id="select-cast"
         class="modal-price__input modal-price__custom-select"
       >
