--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,11 +8,13 @@
                 <ul class="site-nav__wrap">
                     <li><a href="./restaurant.html" class="site-nav__link link">Ресторан</a></li>
                     <li><ul class="site-nav__contact-wrap">
-                        <li><a href="#contact-rest" class="site-nav__icon-link link">
-                            <svg class="site-nav__icon" width="24" height="24">
-                                <use href="./images/sprite.svg#icon-phone"></use>
-                            </svg>
-                        </a></li>
+                        <li>
+                            <button type="button" class="menu-open" data-menu-open>
+                                <svg class="site-nav__icon" width="24" height="24">
+                                    <use href="./images/sprite.svg#icon-phone"></use>
+                                </svg>
+                            </button>
+                        </li>
                         <li><a href="tel:+380955559533" class="site-nav__contact link">095 555 95 33</a></li>
                     </ul></li>
                 </ul>
@@ -21,11 +23,13 @@
                 <ul class="site-nav__wrap">
                     <li><a href="./hotel.html" class="site-nav__link link">Готель</a></li>
                     <li><ul class="site-nav__contact-wrap">
-                        <li><a href="#contact-hotel"class="site-nav__icon-link link">
-                            <svg class="site-nav__icon" width="24" height="24">
+                        <li>
+                            <button type="button" class="menu-open" data-menu-open2>
+                                <svg class="site-nav__icon" width="24" height="24">
                                 <use href="./images/sprite.svg#icon-phone"></use>
-                            </svg>
-                        </a></li>
+                                </svg>
+                            </button>
+                        </li>
                         <li><a href="tel:+380668491089" class="site-nav__contact link">066 849 10 89</a></li>
                         <li><a href="tel:+380672758540" class="site-nav__contact link">067 275 85 40</a></li>
                     </ul></li>
@@ -62,4 +66,79 @@
     </div>
     
 </div>
+<!-- --RESTAURANT -->
+<div class="mob-menu is-hidden" data-menu>
+    <!-- is-hidden -->
+    <div class="mob-container">
+      <button type="button" class="mob-menu-close" data-menu-close>
+        <svg class="mob-icon-close" width="24" height="24">
+            <use href="./images/sprite.svg#icon-close"></use>
+          </svg>
+      </button>
+
+      <p class="mob-menu-title">Контакти</p>
+      <ul class="mob-menu-list list">
+        <li class="mob-menu-item">
+            <p class="mob-menu-text">Ресторан</p>
+            <a class="mob-contact-tel link" href="tel:+380955559533"
+            >095 555 95 33</a
+          >
+        </li>
+        <li class="mob-menu-item">
+            <p class="mob-menu-text">Готель</p>
+            <ul>
+                <li>
+                    <a class="mob-contact-tel link" href="tel:+380668491089"
+                    >066 849 10 89</a
+                    >
+                </li>
+                <li>
+                    <a class="mob-contact-tel link" href="tel:+380672758540"
+                    >067 275 85 40</a
+                    >
+                </li>
+            </ul>
+        </li>
+        </ul>
+    </div>
+
+  </div>
+
+  <!-- --HOTEL -->
+  <div class="mob-menu is-hidden" data-menu2>
+    <!-- is-hidden -->
+    <div class="mob-container">
+      <button type="button" class="mob-menu-close" data-menu-close2>
+        <svg class="mob-icon-close" width="24" height="24">
+            <use href="./images/sprite.svg#icon-close"></use>
+          </svg>
+      </button>
+
+      <p class="mob-menu-title">Контакти</p>
+      <ul class="mob-menu-list list">
+        <li class="mob-menu-item">
+            <p class="mob-menu-text">Ресторан</p>
+            <a class="mob-contact-tel link" href="tel:+380955559533"
+            >095 555 95 33</a
+          >
+        </li>
+        <li class="mob-menu-item">
+            <p class="mob-menu-text">Готель</p>
+            <ul>
+                <li>
+                    <a class="mob-contact-tel link" href="tel:+380668491089"
+                    >066 849 10 89</a
+                    >
+                </li>
+                <li>
+                    <a class="mob-contact-tel link" href="tel:+380672758540"
+                    >067 275 85 40</a
+                    >
+                </li>
+            </ul>
+        </li>
+        </ul>
+    </div>
+
+  </div>
 </header>
