--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -75,6 +75,7 @@
   @include font(400, 14px, 1.2, 0.02em);
   color: $colorTextAddressMobTab;
   border: 0.5px solid $colorAccentYellow;
+  background-color: $colorWhite;
   border-radius: 2px;
   display: flex;
   align-items: center;
