--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -12,7 +12,7 @@
 
     <form class="form form__modal-price">
       <select
-        name="number-cast"
+        name="numberCost"
         id="select-cast"
         class="modal-price__input modal-price__custom-select"
       >
@@ -27,7 +27,7 @@
           <div class="modal-price__input-wrap">
             <input
               type="number"
-              id="number-cast"
+              id="numberCast"
               name="numberCast"
               class="modal-price__input input-cast"
               minlength="1"
@@ -62,7 +62,7 @@
               required
             />
           </div>
-          <label for="number-cost" class="modal-price__label">грн</label>
+          <label for="numberСost" class="modal-price__label">грн</label>
         </div>
       </div>
 
