--- a/src/partials/modal-priceluxe.html
+++ b/src/partials/modal-priceluxe.html
@@ -16,8 +16,8 @@
 
     <form class="form form__modal-price">
       <select
-        name="number-cast"
-        id="select-cast"
+        name="numberCostLuxe"
+        id="select-castLuxe"
         class="modal-price__input modal-price__custom-select"
       >
         <option value="1500" selected>ДВОМІСНИЙ ЛЮКС</option>
@@ -31,8 +31,8 @@
           <div class="modal-price__input-wrap">
             <input
               type="number"
-              id="number-cast"
-              name="numberCast"
+              id="numberCastLuxe"
+              name="numberCastLuxe"
               class="modal-price__input input-cast"
               minlength="1"
               placeholder="1"
@@ -44,7 +44,7 @@
             />
           </div>
 
-          <label for="numberCast" class="modal-price__label-input"
+          <label for="numberCastLuxe" class="modal-price__label-input"
             >Кількість ночей</label
           >
           <!-- <label for="select-cast" class="modal-price__label-select">Кількість ночей</label> -->
@@ -55,8 +55,8 @@
           <div class="modal-price__input-wrap">
             <input
               type="number"
-              id="numberСost"
-              name="numberСost"
+              id="numberСostLuxe"
+              name="numberСostLuxe"
               class="modal-price__input"
               minlength="3"
               placeholder="1000"
@@ -66,7 +66,7 @@
               required
             />
           </div>
-          <label for="number-cost" class="modal-price__label">грн</label>
+          <label for="numberСostLuxe" class="modal-price__label">грн</label>
         </div>
       </div>
 
