--- a/src/partials/modal-price-room-luxe.html
+++ b/src/partials/modal-price-room-luxe.html
@@ -1,10 +1,10 @@
-<div class="backdrop is-hidden" data-modPriceLuxe>
+<div class="backdrop is-hidden" data-modPriceRoomLuxe>
   <!-- is-hidden -->
   <div class="modal-price">
     <button
       type="button"
       class="modal-price__btn-close"
-      data-modPriceLuxe-close
+      data-modPriceRoomLuxe-close
     >
       <svg class="modal-price__icon-close" width="24" height="24">
         <use href="./images/sprite.svg#icon-close"></use>
@@ -12,17 +12,27 @@
     </button>
 
     <p class="modal-price__title">ЦІНИ НА НОМЕР</p>
-    <p class="modal-price__sub-title">Двомісний люкс</p>
+    <!-- <p class="modal-price__sub-title">Двомісний люкс</p> -->
 
     <form class="form form__modal-price">
+      <select
+        name="numberCostLuxe"
+        id="select-castLuxe"
+        class="modal-price__input modal-price__custom-select"
+      >
+        <option value="1500" selected>ДВОМІСНИЙ ЛЮКС</option>
+        <option value="1300">ТРЬОХМІСНИЙ НОМЕР</option>
+        <option value="1000">ДВОМІСНИЙ НОМЕР</option>
+      </select>
+
       <p class="modal-price__text">Категорія номеру</p>
       <div class="container__form-price">
         <div class="wrapper-input">
           <div class="modal-price__input-wrap">
             <input
               type="number"
-              id="number-cast"
-              name="numberCast"
+              id="numberCastLuxe"
+              name="numberCastLuxe"
               class="modal-price__input input-cast"
               minlength="1"
               placeholder="1"
@@ -32,17 +42,9 @@
               value="1"
               required
             />
-
-            <!-- <select name="number-cast" id="select-cast" class="modal-price__input modal-price__custom-select">
-                <option value="1">Одна</option>
-                <option value="2">Дві</option>
-                <option value="3">Три</option>
-                <option value="4">Чотири</option>
-                <option value="5">П'ять</option>
-              </select>      -->
           </div>
 
-          <label for="numberCast" class="modal-price__label-input"
+          <label for="numberCastLuxe" class="modal-price__label-input"
             >Кількість ночей</label
           >
           <!-- <label for="select-cast" class="modal-price__label-select">Кількість ночей</label> -->
@@ -53,17 +55,18 @@
           <div class="modal-price__input-wrap">
             <input
               type="number"
-              id="numberСost"
-              name="numberСost"
+              id="numberСostLuxe"
+              name="numberСostLuxe"
               class="modal-price__input"
               minlength="3"
               placeholder="1000"
               min="100"
               value="1000"
+              disabled
               required
             />
           </div>
-          <label for="number-cost" class="modal-price__label">грн</label>
+          <label for="numberСostLuxe" class="modal-price__label">грн</label>
         </div>
       </div>
 
