--- a/src/partials/pages/room-luxe/hero.html
+++ b/src/partials/pages/room-luxe/hero.html
@@ -158,7 +158,7 @@
     <button
       type="button"
       class="button luxe-hero__button"
-      data-modPriceLuxe-open
+      data-modPriceRoomLuxe-open
     >
       Переглянути ціни
     </button>
