--- a/src/sass/components/_modal-price.scss
+++ b/src/sass/components/_modal-price.scss
@@ -1,163 +1,166 @@
 .modal-price {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
-    transition: transform $transDuration $cubic;
-    padding: 60px 15px;
-    width: 90%;
-    min-height: 572px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform $transDuration $cubic;
+  padding: 60px 15px;
+  width: 90%;
+  min-height: 572px;
 
-    border-radius: 2px;
-    background-color: $colorBgLemon;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 2px;
+  background-color: $colorBgLemon;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 
-    @include mobile {
-        width: 414px;
-    }
-    @include tablet {
-      width: 712px;
-      min-height: 489px;
-      padding: 60px;
-    }
-    @media screen and (max-height: 580px) {
-      top: 100vh;
-    }
-  
+  @include mobile {
+    width: 414px;
+  }
+  @include tablet {
+    width: 712px;
+    min-height: 489px;
+    padding: 60px;
+  }
+  @media screen and (max-height: 460px) {
+    top: calc(100vh - 110px);
+  }
+  @media screen and (min-height: 459px) and (max-height: 580px) {
+    top: calc(100vh - 180px);
+  }
 }
 
 .modal-price__btn-close {
-    position: absolute;
-    top: 16px;
-    right: 16px;
-    padding: 0;
-    margin: 0;
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  padding: 0;
+  margin: 0;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    background-color: transparent;
-    border: 1px solid transparent;
-    transition: color $transDuration $cubic, transform $transDuration $cubic;
-    &:hover, &:focus {
-        color: $colorBrown;
-        transform: rotate(90deg);
-    }
+  background-color: transparent;
+  border: 1px solid transparent;
+  transition: color $transDuration $cubic, transform $transDuration $cubic;
+  &:hover,
+  &:focus {
+    color: $colorBrown;
+    transform: rotate(90deg);
+  }
 }
-  
 
 .modal-price__icon-close {
-    stroke: currentColor;
-    fill: currentColor;
+  stroke: currentColor;
+  fill: currentColor;
 }
 
 .modal-price__title {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 40px;
-    font-family: 'Times New Roman';
-    font-size: 24px;
-    line-height: 1.17;
-    letter-spacing: 0.05em;
-    color: $colorTextMenu; 
-    @include tablet {
-        font-size: 32px;
-        line-height: 1.16;
-    } 
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+  font-family: 'Times New Roman';
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+  color: $colorTextMenu;
+  @include tablet {
+    font-size: 32px;
+    line-height: 1.16;
+  }
 }
 .modal-price__sub-title {
-    margin-bottom: 28px;
-    font-family: 'Times New Roman';
-    font-size: 24px;
-    line-height: 1.17;
-    letter-spacing: 0.05em;
-    color: #808080;
-    @include tablet {
-
-    }
+  margin-bottom: 28px;
+  font-family: 'Times New Roman';
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+  color: #808080;
+  @include tablet {
+  }
 }
 
 // Стилізую шрифти в формі
 .form__modal-price {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.25;
-    color: $colorBrown;
-
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+  color: $colorBrown;
 }
 
 .modal-price__text {
+  margin-bottom: 20px;
+}
+
+.container__form-price {
+  @include tablet {
+    display: flex;
+    gap: 16px;
+  }
+}
+
+.wrapper-input {
+  &:not(:last-child) {
     margin-bottom: 20px;
+  }
+  &:last-child {
+    margin-bottom: 40px;
+  }
+  @include calc-width(1, 16px);
+  @include tablet {
+    &:first-child {
+      margin-bottom: 40px;
+    }
+    @include calc-width(2, 16px);
+  }
 }
 
-.container__form-price{
-    @include tablet {
-        display: flex;
-        gap: 16px;
-    }
-}
-
-.wrapper-input{
-    &:not(:last-child){
-        margin-bottom: 20px;
-    }
-    &:last-child {
-        margin-bottom: 40px;
-    }
-    @include calc-width(1, 16px);
-    @include tablet {
-        &:first-child { margin-bottom: 40px; } 
-        @include calc-width(2, 16px);
-    }
-}
-
-.modal-price__input-wrap{
-    position: relative;
-    margin-bottom: 8px;
+.modal-price__input-wrap {
+  position: relative;
+  margin-bottom: 8px;
 }
 
 .modal-price__input {
-    // ?
-    display: inline-block;
-    position: relative;
+  // ?
+  display: inline-block;
+  position: relative;
 
-    width: 100%;
-    height: 54px;
-    
-    border: 1px solid $colorBrown;
-    padding-left: 15px;
-    font-family: 'Times New Roman', sans;
+  width: 100%;
+  height: 54px;
+
+  border: 1px solid $colorBrown;
+  padding-left: 15px;
+  font-family: 'Times New Roman', sans;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+  color: $colorTextModal;
+  background-color: $colorBgLemon;
+
+  transition: border-color $transDuration $cubic;
+
+  &::placeholder {
+    font-family: 'Times New Roman';
     font-weight: 700;
     font-size: 24px;
     line-height: 1.17;
     letter-spacing: 0.05em;
     color: $colorTextModal;
-    background-color:  $colorBgLemon;
+  }
 
-    transition: border-color $transDuration $cubic;
-
-    &::placeholder {
-        font-family: 'Times New Roman';
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 1.17;
-        letter-spacing: 0.05em;
-        color: $colorTextModal;
-    }
-
-    &:focus {
-        box-shadow: 2px 2px 15px 2px $colorTextSecondary;
-    }
+  &:focus {
+    box-shadow: 2px 2px 15px 2px $colorTextSecondary;
+  }
 }
 
-.modal-price__label-input, .modal-price__label-select,
+.modal-price__label-input,
+.modal-price__label-select,
 .modal-price__label {
-    margin-left: 15px;
+  margin-left: 15px;
 }
 
- //заміна елементів вводу на різних пристроях 
+//заміна елементів вводу на різних пристроях
 // .input-cast {
 //     @include tablet {
 //         display: none;
@@ -185,17 +188,17 @@
 
 //  CUSTOM SELECT
 .modal-price__custom-select {
-    background-image: url(../images/ep_arrow-down-bold.svg);
-    background-position: top 15px right 15px;
+  background-image: url(../images/ep_arrow-down-bold.svg);
+  background-position: top 15px right 15px;
 
-    background-size: 24px 24px;
-    background-repeat: no-repeat;
-    
-     /* reset */
-    margin-bottom: 8px;      
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-appearance: none;
-    -moz-appearance: none;
+  background-size: 24px 24px;
+  background-repeat: no-repeat;
+
+  /* reset */
+  margin-bottom: 8px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
